<resources>
    <string name="app_name">Taiir SleepCare</string>
    <string name="action_settings">Settings</string>
    <string name="delete_user_sure">Delete this profile?</string>
    <string name="delete_user_title">Warning</string>
    <string name="delete_user_really">Delete this profile?</string>
    <string name="delete_user_cancle">Cancel</string>
    <string name="introduction">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;<a href="http://www.taiir.com/" target="_blank">Taiir SleepCare</a> is an innovative sleep and respiratory care solution designed to help you evaluate the quality of sleep and empower you to live a healthy life with the ability to sleep and breathe naturally. By monitoring blood oxygen saturation and pulse rate during your sleep, Taiir SleepCare can make a comprehensive analysis of medical indexes related to sleep apnea and hypopnea. Taiir SleepCare is not only an exceptional tool for SAHS screening but also a partner to help you enjoying a better night’s sleep by providing healthcare guidelines.</string>
    <string name="xyzs">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;SPO2 is a measure of the oxygen saturation level in the arterial blood. Higher oxygen saturation indicates more oxygen in the arterial blood. Normal oxygen saturation levels in humans should be above 94%. Oxygen saturation can change due to lots of factors, including lung or heart function and altitude.</string>
    <string name="mlzs">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;Pulse Rate (PR) indicates the number of pulses per minute. This parameter is useful for evaluating overall heart health and fitness level, as well as exertion levels at a particular moment in time.</string>
    <string name="gzzs">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;Perfusion Index (PI) indicates the arterial pulse signal strength. A low PI reading indicates low perfusion, or poor blood flow to the finger. Cold fingers and toes are often the result of poor perfusion.</string>
    <string name="OKbtn">OK</string>
    <string name="message">Please turn your device on and place your finger inside the sensor！</string>
    <string name="title">Warning</string>
    <string name="xy_title">&#160;&#160;&#160;&#160;&#160;SpO2</string>
    <string name="ml_title">&#160;PR</string>
    <string name="gz_title">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;SPO2</string>
    <string name="button">Warning</string>
    <string name="closebtn">×</string>
    <string name="update_submit">Updating your porfile, please wait......</string>
    <string name="ensure">OK</string>
    <string name="ahi">The total of apneas and hypopneas per hour of sleep, i.e. AI plus HI.</string>
    <string name="ai" formatted="false">An apnea indicates that there is a 90% (or greater) reduction in flow, or cessation of breathing, lasting for 10 seconds or longer during sleep.</string>
    <string name="hi" formatted="false">A hypopnea indicates that there is a 30% (or greater) reduction in flow lasting for 10 seconds or longer and an associated 4% (or greater) desaturation during sleep.</string>
    <string name="mspo2" formatted="false">SpO2 is a term referring to the fraction of oxygen-saturated hemoglobin relative to total hemoglobin (unsaturated + saturated) in the blood. The human body requires and regulates a very precise and specific balance of oxygen in the blood. Healthy individuals at sea level usually exhibit oxygen saturation values between 96% and 99%, and should be above 94%. An SpO2 (arterial oxygen saturation) value below 90% causes hypoxemia.</string>
    <string name="lspo2" formatted="false">SpO2 is a term referring to the fraction of oxygen-saturated hemoglobin relative to total hemoglobin (unsaturated + saturated) in the blood. The human body requires and regulates a very precise and specific balance of oxygen in the blood. Healthy individuals at sea level usually exhibit oxygen saturation values between 96% and 99%, and should be above 94%. An SpO2 (arterial oxygen saturation) value below 90% causes hypoxemia.</string>
    <string name="tp90" formatted="false">SpO2 is a term referring to the fraction of oxygen-saturated hemoglobin relative to total hemoglobin (unsaturated + saturated) in the blood. The human body requires and regulates a very precise and specific balance of oxygen in the blood. Healthy individuals at sea level usually exhibit oxygen saturation values between 96% and 99%, and should be above 94%. An SpO2 (arterial oxygen saturation) value below 90% causes hypoxemia.</string>
    <string name="yjzcs" formatted="false"> The total times of 4% (or greater) desaturation in oxygen.</string>
    <string name="file_log">File List</string>
    <string name="no_media_warning">Storage Media not present</string>
    <string name="no_media_hint">Sharing the storage media with a PC can make it inaccessible</string>
    <string name="open_failed">Unable to open document</string>
     <string name="loading">Loading...</string>
     <string name="yjwhzs" formatted="false">Oxygen Desaturation Risk Index (ODRI) is calculated by a weighted function based on levels of oxygen desaturation during sleep, reflecting the risk of hypoxia-induced chronic diseases caused by sleep apnea. Bigger ODRIs mean Greater probability of chronic diseases.</string>
    <string name="history_record">History</string>
    <string name="date_today">Today</string>
    <string name="respiratory_quality_score">Score of Respiratory Quality</string>
    <string name="sleep_quality_score">Score of Sleep Quality</string>
    <string name="view_details">View Details</string>
    <string name="information">News</string>
    <string name="monitor">Measure</string>
    <string name="report">Report</string>
    <string name="related_information">News</string>
    <string name="sleep_disordered_breathing">What\'s Respiratory and Sleep Disorders?</string>
    <string name="taiir_sleepcare_manual">Taiir SleepCare Manual</string>
    <string name="sleep_disordered_breathing_30" formatted="false">Sleep apnea is a sleep disorder characterized by pauses in breathing or instances of shallow breathing during sleep. Each pause, called apnea, can last for a few seconds to several minutes.</string>
    <string name="snoring_in">Sleep Apnea</string>
    <string name="epworth_sleepiness_scale">Epworth Sleepiness Scale</string>
    <string name="snoring_and_obstructive_sleep_apnea_syndrome">Sleep Apnea Signs, Symptoms and Causes</string>
    <string name="how_to_sleep_apnea_treatment_for_snoring">Sleep Apnea Diagnosis &amp; Treatment</string>
    <string name="add_user">&#160;&#160;Creat New Profile</string>
    <string name="patient_list">Profiles</string>
    <string name="sleep_disordered_breathing_Little_knowledge">What\'s Respiratory and Sleep Disorders?</string>
    <string name="apnea_hypopnea_index_ahi"> Apnea-Hypopnea Index (AHI)</string>
    <string name="low_ventilation">Hypopnea</string>
    <string name="blood_oxygen_saturation">SpO2</string>
    <string name="sleep_apnea">Sleep Apnea</string>
    <string name="oxygen_reduction_index">ODRI</string>
    <string name="oxygen_reduction">Oxygen Desaturation</string>
    <string name="various_parameters">Analysis</string>
    <string name="test_conclusion">Summary</string>
    <string name="osahs_text">OSAHS</string>
    <string name="hypoxia">Hypoxemia</string>
    <string name="respiratory_index">Respiratory</string>
    <string name="apnea_times">Apneas</string>
    <string name="low_ventilation_frequency">Hypopneas</string>
    <string name="oxygen_saturation_is_lower_than_90">T90(SpO2&lt;90%)</string>
    <string name="mean_blood_oxygen_saturation">Mean SpO2</string>
    <string name="lowest_oxygen_saturation">Min SpO2</string>
    <string name="total_oxygen_reduction">Total Desat. Events</string>
    <string name="maximum_pulse_rate">Max PR</string>
    <string name="minimum_pulse_rate">Min PR</string>
    <string name="average_pulse_rate">Mean PR</string>
    <string name="mean_blood_flow_perfusion">Mean PI</string>
    <string name="respiratory_quality_score_text">Score of Respiratory Quality</string>
    <string name="sleep_data">Sleep</string>
    <string name="sleep_time">Time</string>
    <string name="sleep_duration">Duration</string>
    <string name="deep_sleep_duration">Deep Sleep</string>
    <string name="duration_of_sleep">Light Sleep&#160;</string>
    <string name="duration_of_waking_period">Wake&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;</string>
    <string name="sleep_hour">hr</string>
    <string name="sleep_minute">min</string>
    <string name="sleep_quality_score_texts">Score of Sleep Quality</string>
    <string name="doctor_advice">Medical Advice</string>
    <string name="input_advice"> Please input your advice</string>
    <string name="submit_btn">Submit</string>
    <string name="about">About</string>
    <string name="software_version" formatted="false">Version:&#160;&#160;1.1.5(2016-10-17)<a href="http://www.taiir.com/en/terms.html" target="_blank">Terms of Use</a></string>
    <string name="software_license">License:&#160;&#160;Taiir Co., Ltd., Shanghai, China</string>
    <string name="web_url">Website:&#160;&#160;http://www.taiir.com/</string>
    <string name="patient_information">&#160;&#160;&#160;Current Profile</string>
    <string name="switch_user">&#160;&#160;&#160;Profiles</string>
    <string name="monitoring_record">&#160;&#160;&#160;Records</string>
    <string name="user_setting">&#160;&#160;&#160;Settings</string>
    <string name="app_about">&#160;&#160;&#160;About</string>
    <string name="app_exit">&#160;&#160;&#160;Exit</string>
    <string name="here_are_your_medical_history_and_risk_factors">Medical History</string>
    <string name="medical_update">Update→</string>
    <string name="ess_epworth_sleep_scale">Epworth Sleepiness Scale</string>
    <string name="ess_update">Update→</string>
    <string name="in_the_following_circumstances_there_is_no_possibility_of_drowsiness">How likely are you to doze off or fall asleep in the following situations?</string>
    <string name="never">Never</string>
    <string name="history_selection">Medical History</string>
   	<string name="choose_whether_the_following_history_or_risk_factors">Please select if you have the following diseases or risk factors</string>
    <string name="insomnia">Insomnia</string>
    <string name="diabetes">Diabetes</string>
    <string name="hypertension">Hypertension</string>
    <string name="coronary_heart_disease">Coronary Heart Disease</string>
    <string name="heart_failure">Heart Failure</string>
    <string name="arrhythmia">Arrhythmia</string>
    <string name="nasal_obstruction">Nasal Obstruction</string>
    <string name="long_term_smoking">Long-term Smoking</string>
    <string name="bulky_uvula">Elongated Uvula</string>
    <string name="family_history_of_osahs">Familial OSAHS</string>
    <string name="cerebral_vascular_disease">Cerebrovascular Disease</string>
    <string name="renal_function_damage">Renal Dysfunction</string>
    <string name="to_use_a_sedative_drug">Taking Sedatives</string>
    <string name="long_term_heavy_drinking">Long-term Alcohol Abuse</string>
    <string name="whether_menopause">Menopause</string>
    <string name="next_step">Next</string>
    <string name="sleep_care">Taiir SleepCare</string>
    <string name="mobile_phone">Phone</string>
    <string name="verification_code">Code</string>
    <string name="get_verification_code">Verify</string>
    <string name="verify_and_login">Login</string>
    <string name="user_feedback">&#160;&#160;&#160;Feedback</string>
    <string name="feedback">Feedback</string>
    <string name="enter_information_up_to_200">&#160;&#160;Please input your message here.</string>
	<string name="personal_information">&#160;&#160;&#160;Current Profile</string>
	<string name="about_us">&#160;&#160;&#160;About</string>
</resources>